<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BBA_Android</string>

    <!-- text shared views -->
    <string name="acronym_app_name">BBA</string>
    <string name="large_app_name">Baby Blooms Again</string>
    <string name="error_hint" tools:ignore="TypographyEllipsis">Error</string>
    <string name="loading_hint" tools:ignore="TypographyEllipsis">Cargando ...</string>
    <string name="message_error" tools:ignore="TypographyEllipsis">Ocurrio un error, por favor vueleve a intentarlo.\nSi el error persiste comunicate con soporte.</string>
    <string name="success_hint" tools:ignore="TypographyEllipsis">Solicitud exitosa!</string>
    <string name="message_success">Solicitud exitosa, hemos procesado su solicitud con exito.</string>
    <string name="arrow_back">arrow_back</string>
    <string name="continue_action">Continuar</string>
    <string name="try_again">Intentar de nuevo</string>

    <!-- text for splash view -->
    <string name="message_splash">Donde hay amor,\nhay cuidado.\nDonde hay cuidado,\nesta BBA</string>

    <!-- text for decide action view -->
    <string name="message_decide_action">Bienvenido(a), </string>
    <string name="already_account">Ya tengo cuenta</string>
    <string name="not_account_yet">Aun no tengo cuenta</string>

    <!-- text for login view -->
    <string name="sign_in">Iniciar session</string>
    <string name="sign_up">Registrarme</string>
    <string name="forgot_password">Olvide mi contraseña</string>
    <string name="password_hint">********</string>
    <string name="password">Contraseña</string>
    <string name="email_hint">my_email@gmail.com</string>
    <string name="email">Correo electrónico</string>
    <string name="message_login">Por favor ingrese su usuario y\nsu contraseña para acceder con su\ncuenta</string>


    <!-- text for register view -->
    <string name="message_register">Por favor ingrese sus datos para\ncrear una nueva cuenta</string>
    <string name="name">Nombre</string>
    <string name="name_hint">Doris</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="message_process_information">Estamos procesando su información.\nPor favor espere un momento</string>
    <string name="title_activity_home_user">HomeUserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="events">Eventos</string>
    <string name="profile">Perfil</string>
    <string name="my_data">Mis datos</string>
    <string name="photo_profile">photo_profile</string>
    <string name="my_profile">Mi perfil</string>
    <string name="edit">edit</string>
    <string name="edit_text">Editar</string>

    <!-- text for manage profile view -->
    <string name="manager_info_baby">Gestionar informacion de mi bebé</string>
    <string name="arrow_next">arrow next</string>
    <string name="my_information">Mi información</string>
    <string name="full_name">Nombre completo</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="danger">Genero</string>
    <string name="date_birth">Fecha nacimiento</string>
    <string name="information_of_my_babys">Información de mi(s) niño(s)</string>
    <string name="register">Registrar</string>
    <string name="blood_type">Tipo de sangre</string>
    <string name="photo_baby">photo baby</string>
    <string name="view_detail">view detail</string>

    <!-- text for manage register baby view -->
    <string name="register_information">Registrar información</string>
    <string name="pick_photo">pick photo</string>
    <string name="upload_photography">Subir fotografía</string>
    <string name="age">Edad</string>
    <string name="birth_weight">Peso al nacer (grs)</string>
    <string name="birth_size">Altura al nacer (cm)</string>
    <string name="weight_current">Peso actual (kg)</string>
    <string name="size_current_cm">Altura actual</string>
    <string name="gender">Genero</string>
    <string name="text_select_camera_or_gallery">Seleccione el medio por el cuál deseas cargar la fotografia.</string>
    <string name="camera">Camara</string>
    <string name="gallery">Galeria</string>
    <string name="from_gallery">Desde Galeria</string>
    <string name="from_camera">Desde Camara</string>
    <string name="verify_email">Correo verificado</string>

    <string-array name="genders">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="blood_types">
        <item>AB+</item>
        <item>AB-</item>
        <item>0+</item>
        <item>0-</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_my_data">Editar mis datos</string>
    <string name="update_info">Actualizar información</string>
    <string name="activities">Actividades</string>
    <string name="careTips">Consejos de cuidado</string>
    <string name="sleepTips">Consejos de sueño</string>
</resources>
