<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingTop="@dimen/_32dp"
        android:paddingBottom="@dimen/_100dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_marginStart="@dimen/_14dp"
            android:elevation="@dimen/_8dp"
            app:cardCornerRadius="@dimen/_60dp"
            app:cardElevation="@dimen/_8dp">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/photo_profile"
                android:src="@drawable/logo_app" />

        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_14dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:background="@color/bg_blue_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_14dp"
            android:paddingEnd="@dimen/_14dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_information"
                android:textColor="@color/bg_blue_dark"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnEditMyInfo"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/as_edit"
                app:tint="@color/bg_rose" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtEmailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtEmailVeriofy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtPhoneUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtAddressUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_birth"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtDateBirthUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_type"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtBloodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:text="@string/information_of_my_babys"
            android:textColor="@color/bg_blue_dark"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvListSons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/viewEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animEmpty"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_200dp"
                app:lottie_rawRes="@raw/anim_no_baby" />

            <TextView
                android:id="@+id/btnRegisterBaby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/bg_rose"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>