<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue_light"
    tools:context=".ui.auth.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_24dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:layout_margin="@dimen/_10dp"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/vc_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/sign_up"
                android:textColor="@color/bg_blue_dark"
                android:textSize="@dimen/_28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_24dp"
                android:text="@string/message_register"
                android:textColor="@color/bg_blue_dark"
                android:textSize="@dimen/_20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24dp"
                android:elevation="@dimen/_10dp"
                app:cardCornerRadius="@dimen/_20dp"
                app:cardElevation="@dimen/_10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/name"
                        android:textSize="@dimen/_18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:background="@drawable/bg_edit_text_custom"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="@dimen/_20dp"
                        app:boxCornerRadiusBottomStart="@dimen/_20dp"
                        app:boxCornerRadiusTopEnd="@dimen/_20dp"
                        app:boxCornerRadiusTopStart="@dimen/_20dp"
                        app:boxStrokeWidth="@dimen/_2dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtNameUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/name_hint"
                            android:inputType="text"
                            app:hintTextColor="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/email"
                        android:textSize="@dimen/_18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:background="@drawable/bg_edit_text_custom"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="@dimen/_20dp"
                        app:boxCornerRadiusBottomStart="@dimen/_20dp"
                        app:boxCornerRadiusTopEnd="@dimen/_20dp"
                        app:boxCornerRadiusTopStart="@dimen/_20dp"
                        app:boxStrokeWidth="@dimen/_2dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEmailUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/email_hint"
                            android:inputType="text"
                            app:hintTextColor="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/password"
                        android:textSize="@dimen/_18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:background="@drawable/bg_edit_text_custom"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="@dimen/_20dp"
                        app:boxCornerRadiusBottomStart="@dimen/_20dp"
                        app:boxCornerRadiusTopEnd="@dimen/_20dp"
                        app:boxCornerRadiusTopStart="@dimen/_20dp"
                        app:boxStrokeWidth="@dimen/_2dp"
                        app:endIconMode="password_toggle"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPassUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/password_hint"
                            app:hintTextColor="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/confirm_password"
                        android:textSize="@dimen/_18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:background="@drawable/bg_edit_text_custom"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="@dimen/_20dp"
                        app:boxCornerRadiusBottomStart="@dimen/_20dp"
                        app:boxCornerRadiusTopEnd="@dimen/_20dp"
                        app:boxCornerRadiusTopStart="@dimen/_20dp"
                        app:boxStrokeWidth="@dimen/_2dp"
                        app:endIconMode="password_toggle"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtConfirmPassUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/password_hint"
                            app:hintTextColor="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSingUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_24dp"
                android:background="@drawable/bg_button_blue"
                android:elevation="@dimen/_10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_24dp"
                android:layout_marginBottom="@dimen/_32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_account" />

                <TextView
                    android:id="@+id/btnAlreadyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/bg_blue" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>